--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,52 @@ body {
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body::-webkit-scrollbar-track {
+ 
+  background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0,0,0,1);
+} 
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3c4c4c;
+  border-radius: 8px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #060606;
+  border-radius: 8px;
+}
+
+div::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+div::-webkit-scrollbar {
+  width: 4px;
+  background-color: rgba(0,0,0,1);
+} 
+
+div::-webkit-scrollbar-thumb {
+  background-color: #636a6a;
+  border-radius: 8px;
+}
+
+div::-webkit-scrollbar-thumb:hover {
+  background-color: #565353;
+  border-radius: 8px;
+}
+
+
